// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ceramic API Caip10Link test Anchoring works 1`] = `
Object {
  "anchorProof": Object {
    "blockNumber": 1538352000,
    "blockTimestamp": 1538352000,
    "chainId": "inmemory:12345",
    "root": Object {
      "code": 113,
      "hash": Uint8Array [
        18,
        32,
        9,
        14,
        51,
        24,
        226,
        153,
        52,
        12,
        23,
        139,
        247,
        206,
        244,
        238,
        83,
        26,
        212,
        233,
        32,
        85,
        142,
        143,
        140,
        100,
        104,
        77,
        49,
        96,
        208,
        39,
        136,
        11,
      ],
      "version": 1,
    },
    "txHash": Object {
      "code": 147,
      "hash": Uint8Array [
        27,
        32,
        24,
        49,
        225,
        228,
        11,
        171,
        49,
        208,
        15,
        26,
        103,
        65,
        213,
        144,
        208,
        238,
        98,
        25,
        53,
        119,
        40,
        180,
        18,
        220,
        137,
        238,
        244,
        57,
        124,
        243,
        123,
        170,
      ],
      "version": 1,
    },
    "version": 1,
  },
  "anchorStatus": 3,
  "content": "did:3:bafysdfwefwe",
  "log": Array [
    Object {
      "cid": Object {
        "code": 113,
        "hash": Uint8Array [
          18,
          32,
          220,
          69,
          11,
          211,
          217,
          11,
          32,
          171,
          217,
          181,
          63,
          193,
          60,
          28,
          62,
          144,
          62,
          101,
          140,
          47,
          33,
          57,
          154,
          254,
          131,
          167,
          84,
          49,
          14,
          178,
          67,
          157,
        ],
        "version": 1,
      },
      "timestamp": 1538352000,
      "type": 0,
    },
    Object {
      "cid": Object {
        "code": 113,
        "hash": Uint8Array [
          18,
          32,
          129,
          245,
          222,
          196,
          76,
          202,
          40,
          189,
          78,
          211,
          167,
          93,
          117,
          43,
          200,
          130,
          141,
          127,
          22,
          19,
          184,
          210,
          163,
          129,
          49,
          64,
          220,
          161,
          251,
          117,
          140,
          143,
        ],
        "version": 1,
      },
      "timestamp": 1538352000,
      "type": 2,
    },
    Object {
      "cid": Object {
        "code": 113,
        "hash": Uint8Array [
          18,
          32,
          9,
          14,
          51,
          24,
          226,
          153,
          52,
          12,
          23,
          139,
          247,
          206,
          244,
          238,
          83,
          26,
          212,
          233,
          32,
          85,
          142,
          143,
          140,
          100,
          104,
          77,
          49,
          96,
          208,
          39,
          136,
          11,
        ],
        "version": 1,
      },
      "timestamp": 1538352000,
      "type": 1,
    },
    Object {
      "cid": Object {
        "code": 113,
        "hash": Uint8Array [
          18,
          32,
          66,
          255,
          10,
          137,
          219,
          36,
          117,
          166,
          34,
          187,
          210,
          23,
          199,
          127,
          126,
          40,
          54,
          123,
          237,
          242,
          136,
          58,
          66,
          224,
          109,
          24,
          123,
          3,
          49,
          116,
          106,
          19,
        ],
        "version": 1,
      },
      "timestamp": 1538352000,
      "type": 2,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "0x8fe2c4516e920425e177658aaac451ca0463ed69@eip155:1337",
    ],
    "family": "caip10-eip155:1337",
    "lastUpdate": 1641461695,
  },
  "signature": 2,
  "type": 1,
}
`;

exports[`Ceramic API Caip10Link test Create and link DID 1`] = `
Object {
  "anchorStatus": 0,
  "content": null,
  "log": Array [
    Object {
      "cid": Object {
        "code": 113,
        "hash": Uint8Array [
          18,
          32,
          220,
          69,
          11,
          211,
          217,
          11,
          32,
          171,
          217,
          181,
          63,
          193,
          60,
          28,
          62,
          144,
          62,
          101,
          140,
          47,
          33,
          57,
          154,
          254,
          131,
          167,
          84,
          49,
          14,
          178,
          67,
          157,
        ],
        "version": 1,
      },
      "type": 0,
    },
    Object {
      "cid": Object {
        "code": 113,
        "hash": Uint8Array [
          18,
          32,
          79,
          176,
          3,
          183,
          245,
          175,
          148,
          158,
          151,
          111,
          100,
          108,
          165,
          35,
          6,
          223,
          111,
          125,
          124,
          204,
          67,
          32,
          16,
          177,
          79,
          108,
          247,
          92,
          111,
          33,
          168,
          170,
        ],
        "version": 1,
      },
      "type": 1,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "0x8fe2c4516e920425e177658aaac451ca0463ed69@eip155:1337",
    ],
    "family": "caip10-eip155:1337",
  },
  "next": Object {
    "content": "did:3:bafysdfwefwe",
    "metadata": Object {
      "controllers": Array [
        "0x8fe2c4516e920425e177658aaac451ca0463ed69@eip155:1337",
      ],
      "family": "caip10-eip155:1337",
      "lastUpdate": 1641461695,
    },
  },
  "signature": 2,
  "type": 1,
}
`;

exports[`Ceramic API Caip10Link test Create and link DID with legacy CAIP proof 1`] = `
Object {
  "anchorStatus": 0,
  "content": null,
  "log": Array [
    Object {
      "cid": Object {
        "code": 113,
        "hash": Uint8Array [
          18,
          32,
          220,
          69,
          11,
          211,
          217,
          11,
          32,
          171,
          217,
          181,
          63,
          193,
          60,
          28,
          62,
          144,
          62,
          101,
          140,
          47,
          33,
          57,
          154,
          254,
          131,
          167,
          84,
          49,
          14,
          178,
          67,
          157,
        ],
        "version": 1,
      },
      "type": 0,
    },
    Object {
      "cid": Object {
        "code": 113,
        "hash": Uint8Array [
          18,
          32,
          129,
          61,
          78,
          166,
          67,
          96,
          81,
          131,
          252,
          108,
          54,
          180,
          74,
          78,
          6,
          6,
          46,
          244,
          173,
          168,
          246,
          204,
          9,
          186,
          83,
          90,
          227,
          162,
          129,
          77,
          220,
          239,
        ],
        "version": 1,
      },
      "type": 1,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "0x8fe2c4516e920425e177658aaac451ca0463ed69@eip155:1337",
    ],
    "family": "caip10-eip155:1337",
  },
  "next": Object {
    "content": "did:3:bafysdfwefwe",
    "metadata": Object {
      "controllers": Array [
        "0x8fe2c4516e920425e177658aaac451ca0463ed69@eip155:1337",
      ],
      "family": "caip10-eip155:1337",
      "lastUpdate": 1641461695,
    },
  },
  "signature": 2,
  "type": 1,
}
`;

exports[`Ceramic API Caip10Link test Create from legacy account id 1`] = `
Object {
  "anchorStatus": 0,
  "content": null,
  "log": Array [
    Object {
      "cid": Object {
        "code": 113,
        "hash": Uint8Array [
          18,
          32,
          220,
          69,
          11,
          211,
          217,
          11,
          32,
          171,
          217,
          181,
          63,
          193,
          60,
          28,
          62,
          144,
          62,
          101,
          140,
          47,
          33,
          57,
          154,
          254,
          131,
          167,
          84,
          49,
          14,
          178,
          67,
          157,
        ],
        "version": 1,
      },
      "type": 0,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "0x8fe2c4516e920425e177658aaac451ca0463ed69@eip155:1337",
    ],
    "family": "caip10-eip155:1337",
  },
  "next": Object {
    "content": null,
  },
  "signature": 0,
  "type": 1,
}
`;

exports[`Ceramic API Caip10Link test Create from valid account id 1`] = `
Object {
  "anchorStatus": 0,
  "content": null,
  "log": Array [
    Object {
      "cid": Object {
        "code": 113,
        "hash": Uint8Array [
          18,
          32,
          220,
          69,
          11,
          211,
          217,
          11,
          32,
          171,
          217,
          181,
          63,
          193,
          60,
          28,
          62,
          144,
          62,
          101,
          140,
          47,
          33,
          57,
          154,
          254,
          131,
          167,
          84,
          49,
          14,
          178,
          67,
          157,
        ],
        "version": 1,
      },
      "type": 0,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "0x8fe2c4516e920425e177658aaac451ca0463ed69@eip155:1337",
    ],
    "family": "caip10-eip155:1337",
  },
  "next": Object {
    "content": null,
  },
  "signature": 0,
  "type": 1,
}
`;
